--- a/src/main/webapp/app/entities/cuenta-proveedor/cuenta-proveedor-update.component.html
+++ b/src/main/webapp/app/entities/cuenta-proveedor/cuenta-proveedor-update.component.html
@@ -48,16 +48,16 @@
                 </div>
                 <div class="form-group">
                     <label class="form-control-label" for="field_numeroDeCuenta">Numero De Cuenta</label>
-                    <input type="number" class="form-control" name="numeroDeCuenta" id="field_numeroDeCuenta"
-                        [(ngModel)]="cuentaProveedor.numeroDeCuenta" required/>
+                    <input type="text" class="form-control" name="numeroDeCuenta" id="field_numeroDeCuenta"
+                        [(ngModel)]="cuentaProveedor.numeroDeCuenta" required maxlength="150"/>
                     <div [hidden]="!(editForm.controls.numeroDeCuenta?.dirty && editForm.controls.numeroDeCuenta?.invalid)">
                         <small class="form-text text-danger"
                         [hidden]="!editForm.controls.numeroDeCuenta?.errors?.required">
                         This field is required.
                         </small>
                         <small class="form-text text-danger"
-                            [hidden]="!editForm.controls.numeroDeCuenta?.errors?.number">
-                            This field should be a number.
+                        [hidden]="!editForm.controls.numeroDeCuenta?.errors?.maxlength">
+                        This field cannot be longer than 150 characters.
                         </small>
                     </div>
                 </div>
