--- a/frontend/src/app/provider/provider-detail.component.html
+++ b/frontend/src/app/provider/provider-detail.component.html
@@ -145,8 +145,10 @@
           </div>
 
           <div class="p-10 text-right">
-            <button mat-raised-button color="basic" class="bg-warning" (click)="previousState()">IMPRIMIR</button>
-            <button mat-raised-button color="primary" (click)="previousState()">ACEPTAR</button>
+            <div class="button-row">
+              <button mat-raised-button color="basic" class="bg-warning" (click)="previousState()">IMPRIMIR</button>
+              <button mat-raised-button color="primary" (click)="previousState()">ACEPTAR</button>
+            </div>
           </div>
         </form>
       </mat-card-content>
