--- a/frontend/src/app/provider/provider.component.html
+++ b/frontend/src/app/provider/provider.component.html
@@ -3,7 +3,7 @@
   <div fxFlex.gt-lg="100" fxFlex.gt-md="100" fxFlex.gt-xs="100" fxFlex="100">
     <mat-card>
       <mat-card-content>
-        <mat-card-title>Proveedor</mat-card-title>
+        <mat-card-title>Proveedores</mat-card-title>
 
         <div class="responsive-table">
           <div fxLayout="row wrap">
