--- a/frontend/src/app/purchasestatus/purchasestatus.component.html
+++ b/frontend/src/app/purchasestatus/purchasestatus.component.html
@@ -3,7 +3,7 @@
   <div fxFlex.gt-lg="100" fxFlex.gt-md="100" fxFlex.gt-xs="100" fxFlex="100">
     <mat-card>
       <mat-card-content>
-        <mat-card-title>Productos Relacionados</mat-card-title>
+        <mat-card-title>Estado de Compras</mat-card-title>
         <div class="responsive-table">
           <div fxLayout="row wrap">
             <mat-form-field fxFlex.gt-sm="75" fxFlex="75">
