delivered estatus integration and abstractions

--- a/frontend/src/app/configuration/deliverystatus/deliverystatus-delete.component.html
+++ b/frontend/src/app/configuration/deliverystatus/deliverystatus-delete.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title style="text-align: center;">Aviso</h1>
 <div mat-dialog-content>
-  <p>¿Esta Seguro de eliminar el producto relacionado?</p>
+  <p>¿Esta Seguro de eliminar el estado de delivery?</p>
 </div>
 <div mat-dialog-actions>
   <button mat-button [mat-dialog-close]="data.entity" tabindex="2">Si</button>
