--- a/frontend/src/app/configuration/purchasestatus/purchasestatus-delete.component.html
+++ b/frontend/src/app/configuration/purchasestatus/purchasestatus-delete.component.html
@@ -1,8 +1,8 @@
 <h1 mat-dialog-title style="text-align: center;">Aviso</h1>
 <div mat-dialog-content>
-  <p>¿Esta Seguro de eliminar el estato de compra?</p>
+  <p>¿Esta Seguro de eliminar el estado de compra?</p>
 </div>
 <div mat-dialog-actions>
-  <button mat-button [mat-dialog-close]="data.productoRelacionadoTag" tabindex="2">Si</button>
+  <button mat-button [mat-dialog-close]="data.entity" tabindex="2">Si</button>
   <button mat-button (click)="onNoClick()" tabindex="-1">No</button>
 </div>
