added quantity in variant

--- a/src/main/webapp/app/entities/variante/variante-detail.component.html
+++ b/src/main/webapp/app/entities/variante/variante-detail.component.html
@@ -21,6 +21,10 @@
                 <dd>
                     <span>{{variante.precioCompra}}</span>
                 </dd>
+                <dt><span>Cantidad</span></dt>
+                <dd>
+                    <span>{{variante.cantidad}}</span>
+                </dd>
                 <dt><span>Productos</span></dt>
                 <dd>
                     <span *ngFor="let productos of variante.productos; let last = last">
