--- a/frontend/src/app/forms/autocomplete/autocomplete.component.html
+++ b/frontend/src/app/forms/autocomplete/autocomplete.component.html
@@ -48,8 +48,8 @@
                         <input type="text" placeholder="Pick one" aria-label="Number" matInput [formControl]="myControl"
                             [matAutocomplete]="autoTest">
                         <mat-autocomplete #autoTest="matAutocomplete">
-                            <mat-option *ngFor="let option of options1" [value]="option">
-                                {{option}}
+                            <mat-option *ngFor="let option of options1" [value]="option.name">
+                                {{option.name}}
                             </mat-option>
                         </mat-autocomplete>
                     </mat-form-field>
